[gd_scene load_steps=3 format=3 uid="uid://b6mp1p6u86nny"]

[ext_resource type="Script" uid="uid://cb7pkqvg7i3w5" path="res://components/DataInputs/DataInputAction/DataInputAction.gd" id="1_m5rbk"]
[ext_resource type="StyleBox" uid="uid://cftl4b5dnt57b" path="res://assets/styles/ResolveBoxBGLess.tres" id="2_k4big"]

[node name="DataInputAction" type="PanelContainer"]
custom_minimum_size = Vector2(0, 50)
offset_right = 86.5625
offset_bottom = 49.0
script = ExtResource("1_m5rbk")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBox"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "Action"

[node name="Outline" type="Panel" parent="HBox/Button"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_k4big")

[connection signal="button_down" from="HBox/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="HBox/Button" to="." method="_on_button_button_up"]
[connection signal="toggled" from="HBox/Button" to="." method="_on_button_toggled"]
